--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^7.0.1",
+    "@react-spring/web": "^9.7.5",
+    "motion": "^12.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-tilt": "^1.0.2",
     "typewriter-effect": "^2.12.0"
   },
   "devDependencies": {
